# ClangSwift

./: .travis.yml  Package.swift
Sources/Clang/: CompilationDatabase.swift  Cursors.swift  Index.swift  Token.swift  TranslationUnit.swift
Tests/ClangTests/: ClangTests.swift
input_tests/: CMakeLists.txt  init-ast.ast
utils/: make-compile_commands.swift
